# graph-rtce

./: .gitignore  App.hs  Client.hs  Frontend.hs  LICENSE  README.md  Server.hs  Types.hs  build-js.sh  graph-rtce.cabal  main.hs  pallygraph.cabal  playgraph.cabal
js/: app.js
src/: Server.hs
src/Pages/: Index.hs
