name:                graph-rtce
version:             0.0.0.0
synopsis:            Real-time collaborative editing for graphs.
license:             MIT
license-file:        LICENSE
author:              Daniel Buckmaster
maintainer:          dan.buckmaster@gmail.com
build-type:          Simple
cabal-version:       >=1.18

executable graph-rtce
  ghc-options:          -threaded -Wall -O
  main-is:              Server.hs
  build-depends:        wai, wai-extra, wai-handler-devel, warp,
                        websockets, wai-websockets,
                        scotty == 0.6.2,
                        blaze-html,
                        containers, text, bytestring,
                        fay, fay-base, fay-dom,
                        aeson,
                        type-eq == 0.4,
                        base >= 4.6
  default-language:     Haskell2010
