name:                graph-rtce
version:             0.0.0.0
synopsis:            Real-time collaborative editing for graphs.
license:             MIT
license-file:        LICENSE
author:              Daniel Buckmaster
maintainer:          dan.buckmaster@gmail.com
build-type:          Simple
cabal-version:       >=1.18

executable graph-rtce
  hs-source-dirs:       src
  main-is:              Server.hs
  build-depends:        scotty == 0.6.2,
                        type-eq == 0.4,
                        wai, wai-extra, wai-handler-devel, warp,
                        websockets, wai-websockets,
                        blaze-html,
                        containers, text, bytestring,
                        fay,
                        aeson,
                        mtl,
                        base >= 4.6
  ghc-options:          -threaded -Wall -O
  default-language:     Haskell2010
