name:                graph-rtce
version:             0.0.0.0
synopsis:            Real-time collaborative editing for graphs.
license:             MIT
license-file:        LICENSE
author:              Daniel Buckmaster
maintainer:          dan.buckmaster@gmail.com
build-type:          Simple
cabal-version:       >=1.18

executable graph-rtce
  hs-source-dirs:       src
  main-is:              Server.hs
  build-depends:        scotty >= 0.6.2, blaze-html,
                        wai, wai-extra, warp,
                        websockets, wai-websockets,
                        fay, aeson,
                        mtl, stm,
                        containers, text, bytestring,
                        type-eq == 0.4,
                        base >= 4.6
  ghc-options:          -threaded -Wall -O
  default-language:     Haskell2010
