name:                pallygraph
version:             0.1.0.0
synopsis:            Collaborative editing over websockets.
description:         Edit graphs with your pals.
license:             MIT
license-file:        LICENSE
author:              Daniel Buckmaster
maintainer:          dan.buckmaster@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable pallygraph
  ghc-options:          -threaded -Wall -O
  main-is:              App.hs
  build-depends:        wai,
                        wai-extra,
                        warp,
                        scotty,
                        websockets,
                        wai-websockets,
                        wai-handler-devel,
                        base
  default-language:     Haskell2010
