name:                pallygraph
version:             0.1.0.0
synopsis:            Collaborative editing over websockets.
description:         Edit graphs with your pals.
license:             MIT
license-file:        LICENSE
author:              Daniel Buckmaster
maintainer:          dan.buckmaster@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable pallygraph
  ghc-options:          -threaded -Wall -O
  main-is:              App.hs
  build-depends:        wai, wai-extra, wai-handler-devel, warp,
                        websockets, wai-websockets,
                        scotty == 0.6.2,
                        blaze-html,
                        containers, text, bytestring,
                        fay, fay-base, fay-dom,
                        aeson,
                        type-eq == 0.4,
                        base
  default-language:     Haskell2010
